consolidate launch script, fix ctrl+enter beahviour in bash